--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
   <!-- All CSS -->
   <link rel="stylesheet" href="https://maxst.icons8.com/vue-static/landings/line-awesome/line-awesome/1.3.0/css/line-awesome.min.css">
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
-  <link rel="stylesheet" href="assets/css/all.min.css">
   <!-- Main Style -->
   <link rel="stylesheet" href="assets/css/style.css">
   <link rel="stylesheet" href="assets/css/responsive.css">
@@ -90,7 +89,7 @@
 </header>
 
 <section class="banner-area">
-  <video autoplay muted loop id="myVideo">
+  <video autoplay muted loop playsinline disablePictureInPicture="true" id="myVideo">
     <source src="assets/img/videoplayback.mp4" type="video/mp4">
     Your browser does not support HTML5 video.
   </video>
