--- a/index.html
+++ b/index.html
@@ -58,29 +58,29 @@
 <header class="no-bg">
  <div class="container">
   <nav class="navbar navbar-expand-md bg-white">
-    <a class="navbar-brand" href="#"><img src="assets/img/marifam-logo.png" alt="marifam-logo"></a>
+    <a class="navbar-brand" href="index.html"><img src="assets/img/marifam-logo.png" alt="marifam-logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <i class="las la-bars"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav  ml-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home  </a>
+          <a class="nav-link" href="index.html">Home  </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">About Us</a>
+          <a class="nav-link" href="about.html">About Us</a>
         </li>
         <li class="nav-item dropdown">
-          <a class="nav-link" href="#">Services</a>
+          <a class="nav-link" href="javascript:void(0)">Services</a>
           <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-            <a class="dropdown-item" href="#">Hire drivers </a>
-            <a class="dropdown-item" href="#">Owner Operator</a>
-            <a class="dropdown-item" href="#">Lease drivers</a>
+            <a class="dropdown-item" href="drive-with-us.html">DRIVE WITH US  </a>
+            <a class="dropdown-item" href="owner-operator.html">OWNER OPERATORS            </a>
+            <a class="dropdown-item" href="need-a-driver.html">NEED A DRIVER?</a>
          
           </div>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="#">Contact Us</a>
+          <a class="nav-link " href="contact.html">Contact Us</a>
         </li>
       </ul>
     </div>
@@ -126,7 +126,7 @@
       <div class="col-md-4">
         <div class="service-card service-img-1">
           <h5>DRIVE WITH US</h5>
-        <a href="" class="btn-outline">View details <i class="las la-arrow-right"></i></a>
+        <a href="drive-with-us.html" class="btn-outline">View details <i class="las la-arrow-right"></i></a>
         </div>
       </div>
 
@@ -134,7 +134,7 @@
       <div class="col-md-4">
         <div class="service-card service-img-2">
           <h5>Owner Operators</h5>
-        <a href="" class="btn-outline">View details <i class="las la-arrow-right"></i></a>
+        <a href="owner-operator.html" class="btn-outline">View details <i class="las la-arrow-right"></i></a>
         </div>
       </div>
 
@@ -142,7 +142,7 @@
       <div class="col-md-4">
         <div class="service-card service-img-3">
           <h5>NEED A DRIVER?</h5>
-        <a href="" class="btn-outline">View details <i class="las la-arrow-right"></i></a>
+        <a href="need-a-driver.html" class="btn-outline">View details <i class="las la-arrow-right"></i></a>
         </div>
       </div>
 
@@ -168,7 +168,7 @@
           </div>
 
           <div class="about-us-button">
-            <a href="" class="btn-filled">Read More About Us</a>
+            <a href="about.html" class="btn-filled">Read More About Us</a>
           </div>
         </div>
       </div>
@@ -233,7 +233,7 @@
 <section class="our-success">
 <div class="container">
 
-<div class="row">
+<div class="row align-items-center">
   <div class="col-md-5">
     <div class="section-title text-left pb-2">
       <h2>Our Achievement</h2>
@@ -242,8 +242,7 @@
     <div class="our-success-description">
       <p>We have  more than 10+ Years of Exprience . We have about 10+ satisfied clients because we focus on client satisfaction first.
       </p>
-      <p>We have  more than 10+ Years of Exprience . We have about 10+ satisfied clients because we focus on client satisfaction first.
-      </p>
+    
     </div>
   </div>
 
@@ -286,7 +285,7 @@
     <div class="cta-inner">
       <h2>Have Any Question?</h2>
       <p>We’re here to answer.</p>
-      <a href="" class="btn-filled">CONTACT US</a>
+      <a href="contact.html" class="btn-filled">CONTACT US</a>
     </div>
   </div>
 </section>
@@ -306,9 +305,9 @@
         <div class="footer-link">
           <h5>Our Services</h5>
           <ul>
-            <li><a href="">hire drivers  </a></li>
-            <li><a href=""> Owner Operator </a></li>
-            <li><a href=""> lease drivers </a></li>
+            <li><a href="drive-with-us.html">Drive With Us </a></li>
+            <li><a href="owner-operator.html"> Owner Operator </a></li>
+            <li><a href="need-a-driver.html"> Need A Driver? </a></li>
           </ul>
         </div>
       </div>
@@ -316,8 +315,8 @@
      <div class="footer-link">
       <h5>Useful Link</h5>
       <ul>
-        <li><a href=""> About Us</a></li>
-        <li><a href=""> Contact Us </a></li>
+        <li><a href="about.html"> About Us</a></li>
+        <li><a href="contact.html"> Contact Us </a></li>
         <li><a href=""> Privacy Policy</a></li>
         <li><a href=""> Terms & Condition </a></li>
       </ul>
@@ -354,22 +353,12 @@
   <script src="assets/js/vendor/jquery-3.4.1.min.js"></script>
   <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/waypoints/4.0.1/jquery.waypoints.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Counter-Up/1.0.0/jquery.counterup.js"></script>
+  <script src="assets/js/waypoint.js"></script>
+  <script src="assets/js/countup.js"></script>
   <script src="assets/js/main.js"></script>
 
   <script>
-    document.addEventListener("scroll", function () {
-
-
-if (document.body.scrollTop > 100 || document.documentElement.scrollTop > 100) {
-$('header').removeClass('no-bg')
-} else {
-
-$('header').addClass('no-bg')
-
-}
-})
+ 
 $('.count').counterUp({
   delay: 10,
   time: 2000
