--- a/need-a-driver.html
+++ b/need-a-driver.html
@@ -7,33 +7,35 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:site" content="@site_name">
-  <meta property="twitter:creator" content="@site_name">
+  <meta property="twitter:site" content="@marifamtrucking">
+  <meta property="twitter:creator" content="@marifamtrucking">
 
-  <meta property="twitter:title" content="title_text">
-  <meta property="og:title" content="title_text" xmlns:og="http://opengraphprotocol.org/schema/" />
+  <meta property="twitter:title" content="We are commited to provide quality trucking services">
+  <meta property="og:title" content="We are commited to provide quality trucking services" xmlns:og="http://opengraphprotocol.org/schema/" />
 
-  <meta name="description" content="description_text" />
-  <meta property="twitter:description" content="description_text">
-  <meta property="og:description" content="description_text" xmlns:og="http://opengraphprotocol.org/schema/" />
+  <meta name="description" content="MariFam Trucking LLC offer a full range of transportation services which includes transportation management, dedicated contract carriage and driver recruiting." />
+  <meta property="twitter:description" content="MariFam Trucking LLC offer a full range of transportation services which includes transportation management, dedicated contract carriage and driver recruiting.">
+  <meta property="og:description" content="MariFam Trucking LLC offer a full range of transportation services which includes transportation management, dedicated contract carriage and driver recruiting." xmlns:og="http://opengraphprotocol.org/schema/" />
   
-  <meta property="twitter:image" content="image_link">
-  <meta property="og:image" content="image_link" xmlns:og="http://opengraphprotocol.org/schema/" />
+  <meta property="twitter:image" content="assets/img/about-us.jpeg">
+  <meta property="og:image" content="assets/img/about-us.jpeg" xmlns:og="http://opengraphprotocol.org/schema/" />
   <meta property="og:image:width" content="600" xmlns:og="http://opengraphprotocol.org/schema/" />
   <meta property="og:image:height" content="315" xmlns:og="http://opengraphprotocol.org/schema/" />
 
-  <meta property="og:url" content="website url" xmlns:og="http://opengraphprotocol.org/schema/" />
-  <meta property="og:site_name" content="website_link" xmlns:og="http://opengraphprotocol.org/schema/" />
+  <meta property="og:url" content="https://marifamtrucking.com" xmlns:og="http://opengraphprotocol.org/schema/" />
+  <meta property="og:site_name" content="https://marifamtrucking.com/" xmlns:og="http://opengraphprotocol.org/schema/" />
   
  
-  <meta property="og:type" content="product" xmlns:og="http://opengraphprotocol.org/schema/" />
+  <meta property="og:type" content="service" xmlns:og="http://opengraphprotocol.org/schema/" />
   <!-- <meta property="fb:app_id" content=" " xmlns:fb="http://www.facebook.com/2008/fbml" /> -->
-  <meta name='keywords' content=' ' />
+  <meta name='keywords' content='largest trucking companies 2021, logistics trucking services, top 10 trucking companies, top trucking companies 2021, what are the 10 largest trucking companies in the united states, top trucking companies 2020, largest trucking company in the united states, most profitable trucking companies' />
 
-  <link rel="canonical" href="website_link" />
+
+  
+  <link rel="canonical" href="https://marifamtrucking.com/" />
 
   <!-- Site Title -->
-  <title>title_text</title>
+  <title>Need A Driver?</title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
@@ -150,7 +152,7 @@
       <div class="col-lg-4 col-md-12">
         <div class="company-logo">
           <img src="assets/img/marifam-logo.png" alt="logo">
-          <p>MariFam trucking lLC is a faith based business that offer a full range of transportation service including transportation management dedicated contract carriage and driver recruiting. </p>
+          <p>MariFam Trucking LLC is a faith based business that offer a full range of transportation service including transportation management dedicated contract carriage and driver recruiting. </p>
         </div>
       </div>
       <div class="col-lg-3 col-md-4">
@@ -198,7 +200,7 @@
 <div class="copyright-wrap">
   <div class="container">
     <div class="coyright-text">
-      <p>Copyright 2021 | MariFam trucking LLC </p>
+      <p>Copyright 2021 | MariFam Trucking LLC </p>
     </div>
   </div>
 </div>
