--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
 <header class="no-bg">
  <div class="container">
   <nav class="navbar navbar-expand-md bg-white">
-    <a class="navbar-brand" href="index.html"><img src="assets/img/marifam-logo.png" alt="marifam-logo"></a>
+    <a class="navbar-brand" href="index.html"><img loading="lazy" src="assets/img/marifam-logo.png" alt="marifam-logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <i class="las la-bars"></i>
     </button>
@@ -133,7 +133,7 @@
 
       <div class="col-md-6">
         <div class="about-us-img">
-          <img src="assets/img/about-us.jpeg" alt="about us">
+          <img loading="lazy" src="assets/img/about-us.jpeg" alt="about us">
         </div>
       </div>
 
@@ -168,21 +168,21 @@
 
       <!-- single items  -->
       <div class="single-achievement">
-        <img src="assets/img/exprience.png" alt="eprience">
+        <img loading="lazy" src="assets/img/exprience.png" alt="eprience">
         <span class="count ">5</span>
         <h6>Years Of Exprience</h6>
       </div>
 
       <!-- single items  -->
       <div class="single-achievement">
-        <img src="assets/img/happy-client.png" alt="happy client">
+        <img loading="lazy" src="assets/img/happy-client.png" alt="happy client">
         <span class="count">100</span>
         <h6>Happy Clients</h6>
       </div>
 
       <!-- single items  -->
       <div class="single-achievement">
-        <img src="assets/img/award.png" alt="award">
+        <img loading="lazy" src="assets/img/award.png" alt="award">
         <span class="count">3</span>
         <h6>Award Won</h6>
       </div>
@@ -213,7 +213,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-12">
         <div class="company-logo">
-          <img src="assets/img/marifam-logo.png" alt="logo">
+          <img loading="lazy" src="assets/img/marifam-logo.png" alt="logo">
           <p>MariFam Trucking LLC is a faith based business that offer a full range of transportation service including transportation management dedicated contract carriage and driver recruiting. </p>
         </div>
       </div>
