--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 <header class="no-bg">
  <div class="container">
   <nav class="navbar navbar-expand-md bg-white">
-    <a class="navbar-brand" href="index.html"><img src="assets/img/marifam-logo.png" alt="marifam-logo"></a>
+    <a class="navbar-brand" href="index.html"><img loading="lazy" src="assets/img/marifam-logo.png" alt="marifam-logo"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <i class="las la-bars"></i>
     </button>
@@ -161,7 +161,7 @@
     <div class="row">
       <div class="col-lg-4 col-md-12">
         <div class="company-logo">
-          <img src="assets/img/marifam-logo.png" alt="logo">
+          <img loading="lazy" src="assets/img/marifam-logo.png" alt="logo">
           <p>MariFam Trucking LLC is a faith based business that offer a full range of transportation service including transportation management dedicated contract carriage and driver recruiting. </p>
         </div>
       </div>
