--- a/about.html
+++ b/about.html
@@ -233,8 +233,8 @@
       <ul>
         <li><a href="about.html"> About Us</a></li>
         <li><a href="contact.html"> Contact Us </a></li>
-        <li><a href=""> Privacy Policy</a></li>
-        <li><a href=""> Terms & Condition </a></li>
+       <li><a href="privacy-policy.html"> Privacy Policy</a></li>
+        <li><a href="terms-and-condition.html"> Terms & Condition </a></li>
       </ul>
      </div>
       </div>
