--- a/terms-and-condition.html
+++ b/terms-and-condition.html
@@ -35,7 +35,7 @@
   <link rel="canonical" href="https://marifamtrucking.com/" />
 
   <!-- Site Title -->
-  <title>Need A Driver?</title>
+  <title>Terms And Condition</title>
 
   <!-- Favicon -->
   <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
@@ -93,12 +93,11 @@
 <section class="small-banner-area ">
 <div class="container">
   <div class="small-banner-content">
-    <h1>Need A Driver?</h1>
+    <h1>Terms And Condition</h1>
     <ul>
       <li class="first-child">Your Are Here : </li>
       <li><a href="index.html">Home</a></li>
-      <li class="last-child"> Services</li>
-      <li class="last-child"> Need A Driver?</li>
+      <li class="last-child"> Terms And Condition</li>
     </ul>
   </div>
 </div>
@@ -106,33 +105,22 @@
 
  
 
-<section class="single-page-area section-padding">
+<section class="content-page section-padding">
   <div class="container">
-    <div class="row">
-      <div class="col-md-8">
-        <div class="single-page-content">
-          <h2>Need A Driver?          </h2>
-         
-          <p>Are you a company struggling to find drivers for your business? Well, we got you!! We help companies struggling to find drivers get their dream drivers and help them keep their drivers. Tell us the type of driver you're looking for, and we'll make sure to find him for you!
-          </p>
+ <div class="row justify-content-center">
+   <div class="col-md-8">
+    <div class="terms-page ">
+      <h5>Terms And Conditon</h5>
+      <p>All content, information and opinions (collectively, all content) presented on MariFam Trucking Community Website (marifamtrucking.com or TruckingPlanet.co) does not guarantee the reliability, completeness, accuracy, timeliness of the material presented on this website. The content is published “as is,” and does not represent the official views and opinions of The MariFam Trucking Network or any company. Any reliance upon the content presented on this website shall be at User’s own risk.</p>
 
-  
+      <p>Any lifetime member who demonstrates unprofessional behavior such as posting profane or harassing language or unprofessional conduct by telephone, will have their accounts immediately terminated and will be billed for all services used.
 
-            <a href="" class="btn-filled">GET A DRIVER</a>
-        </div>
-      </div>
+      </p>
 
-      <div class="col-md-4">
-        <div class="sidebar">
-          <h5>Other Services</h5>
-           <ul>
-            <li> <a href="drive-with-us.html"><i class="las la-arrow-right"></i> DRIVE WITH US            </a></li>
-            <li> <a href="owner-operator.html"><i class="las la-arrow-right"></i> OWNER OPERATORS            </a></li>
-            <li> <a href="need-a-driver.html"><i class="las la-arrow-right"></i> NEED A DRIVER?            </a></li>
-          </ul>
-        </div>
-      </div>
+      <p>MariFam Trucking does not review the substance of the content posted by users on this site and is therefore not responsible for any of such content. MariFam Trucking merely provides a space for its users to express and exchange their own opinions. We reserve the right to refuse service to anyone.</p>
     </div>
+   </div>
+ </div>
   </div>
 </section>
 
@@ -208,8 +196,7 @@
   <script src="assets/js/vendor/modernizr-3.6.0.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
   <script src="assets/js/main.js"></script>
-
-  
+ 
 </body>
 
 </html>
