--- a/contact.html
+++ b/contact.html
@@ -110,7 +110,7 @@
     <div class="section-title">
          
       <h2>Can't find what you're looking for?</h2>
-      <p>Fill out the form with your information and project description. </p>
+      <p>Fill out the form with your information. </p>
     </div>
 
     <div class="row">
