--- a/index.html
+++ b/index.html
@@ -100,8 +100,10 @@
       <h1>WE ARE COMMITED TO PROVIDE QUALITY TRUCKING SERVICES</h1>
       <h5>including transportation management, dedicated contract carriage and driver recruitment.</h5>
       <div class="banner-btns">
-        <a href="" class="btn-filled">WANT TO DRIVE? APPLY NOW</a>
-        <a href="" class="btn-filled">Need a driver? Get a quote</a>
+        <a target="_blank" href="https://form.jotform.com/213467224123145" class="btn-filled">WANT TO DRIVE? APPLY NOW</a>
+        
+        <a target="_blank" href="https://form.jotform.com/213467316338155" class="btn-filled">OWNER OPERATOR</a>
+        <a target="_blank" href="https://form.jotform.com/213466965169166" class="btn-filled">Need a driver? Get a quote</a>
       </div>
     </div>
   </div>
@@ -232,65 +234,24 @@
 
 
 
-<section class="our-success">
+<section class="home-contact-section">
 <div class="container">
-
+  <div class="section-title pb-3  ">
+    <h2>Contact With Us</h2>
+   </div>
 <div class="row align-items-center">
-  <div class="col-md-5">
-    <div class="section-title text-left pb-2">
-      <h2>Our Achievement</h2>
-    </div>
-
-    <div class="our-success-description">
-      <p>We have  more than 10+ Years of Exprience . We have about 10+ satisfied clients because we focus on client satisfaction first.
-      </p>
-    
-    </div>
+<div class="col-12">
+  <div class="contact-form">
+    <script type="text/javascript" src="https://form.jotform.com/jsform/213482953396466"></script>
   </div>
-
-
-  <div class="col-md-7">
-    <div class="our-achievement-items">
-
-      <!-- single items  -->
-      <div class="single-achievement">
-        <img loading="lazy" src="assets/img/exprience.png" alt="eprience">
-        <span class="count ">5</span>
-        <h6>Years Of Exprience</h6>
-      </div>
-
-      <!-- single items  -->
-      <div class="single-achievement">
-        <img loading="lazy" src="assets/img/happy-client.png" alt="happy client">
-        <span class="count">100</span>
-        <h6>Happy Clients</h6>
-      </div>
-
-      <!-- single items  -->
-      <div class="single-achievement">
-        <img loading="lazy" src="assets/img/award.png" alt="award">
-        <span class="count">3</span>
-        <h6>Award Won</h6>
-      </div>
-
-    </div>
-  </div>
+</div>
 </div>
 
 </div>
 </section>
 
 
-
-<section class="cta-area">
-  <div class="container">
-    <div class="cta-inner">
-      <h2>Have Any Question?</h2>
-      <p>We’re here to answer.</p>
-      <a href="contact.html" class="btn-filled">CONTACT US</a>
-    </div>
-  </div>
-</section>
+ 
 
 
 
