--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 <section class="home-contact-section">
 <div class="container">
   <div class="section-title pb-3  ">
-    <h2>Contact With Us</h2>
+    <h2>Contact Us</h2>
    </div>
 <div class="row align-items-center">
 <div class="col-12">
