--- a/about.html
+++ b/about.html
@@ -113,7 +113,7 @@
         <div class="about-us-content border-0">
           <div class="section-title text-left pb-2">
              
-            <h2>Who We Are</h2>
+            <h2>Who Are We?</h2>
           </div>
           <div class="about-us-description border-0">
             <p>MariFam Trucking has been working steadily in the American transport market since 2019. </p>
