--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="about-us-content">
           <div class="section-title text-left pb-2">
            
-            <h2>Who We Are</h2>
+            <h2>Who Are We?</h2>
           </div>
           <div class="about-us-description">
             <p>MariFam Trucking has been working steadily in the American transport market since 2019. </p>
