--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
 
           <div class="social-link">
             <ul>
-              <li><a href=""> <i class="lab la-facebook-square"></i> </a></li>
+              <li><a target="_blank" href="https://www.facebook.com/MariFam-Trucking-LLC-106074258574646"> <i class="lab la-facebook-square"></i> </a></li>
               <li><a href=""> <i class="lab la-twitter-square"></i> </a></li>
               <li><a href=""> <i class="lab la-linkedin"></i> </a></li>
               <li><a href=""><i class="lab la-pinterest-square"></i>  </a></li>
